chore: added CRUD for user and Auth module

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,11 @@ FIREBASE_PRIVATE_KEY_ID=
 FIREBASE_PRIVATE_KEY=
 FIREBASE_CLIENT_ID=
 FIREBASE_CLIENTX509CERTURL=
+
+#Mailer Configs
+MAILER_USER=
+MAILER_PASS=
+MAILER_DOMAIN=
+
+#Front Data
+FRONT_BASE_URL=
