--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3.8'
 
 services:
-  main:
-    container_name: service-unider-backend
-    build:
-      context: .
-      target: development
-      dockerfile: ./Dockerfile
-    command: yarn start:debug
-    volumes:
-      - .:/usr/src/app
-      - ./node_modules:/usr/src/app/node_modules
-    ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
-      - 9229:9229
-    env_file:
-      - .env
-    environment:
-      - "DB_HOST=postgres"
-      - "DB_PORT=5432"
-    networks:
-      - service-unider-network
-    restart: unless-stopped
+  # main:
+  #   container_name: service-unider-backend
+  #   build:
+  #     context: .
+  #     target: development
+  #     dockerfile: ./Dockerfile
+  #   command: yarn start:debug
+  #   volumes:
+  #     - .:/usr/src/app
+  #     - /usr/src/app/node_modules
+  #   ports:
+  #     - ${SERVER_PORT}:${SERVER_PORT}
+  #     - 9229:9229
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - "DB_HOST=postgres"
+  #     - "DB_PORT=5432"
+  #   networks:
+  #     - service-unider-network
+  #   restart: unless-stopped
 
   postgres:
     image: postgres:latest
